LIST OF CHANGES for npg_ranger project

  - add support for iRODS 4.2 clients in containers

release 3.0.0
  - upgrade node version to support node 10 and 12
    - remove support for node 6 and 8
    - update tests code to be compatible with new node versions
  - upgrade package dependencies and developer dependencies
  - modify test checking start up failure to improve test stability
  - added support for HTTP POST requests in server using header
    - encodes regions and passes it through headers
    - updated tests from GET that apply to POST
    - added new tests unique to POST
  - add a JSON schema that POST requests query must follow
  - implement new module to differentiate between valid multiregion
    queries and invalid duplicate values in queries
    - checks array of objects (valid multiregions) versus array of values (invalid)
    - created test spec to check functionality
  - implement new module to encode and decode the multiregions headers
    - gzips header and then converts to base64
    - created test spec to check functionality
  - implement new module to validate POST request query
    - checks if valid JSON first, then if fits the
      aforementioned JSON schema
    - checks range starts and ends
    - collapses any overlapping regions
    - created test spec to test functionality
  - update Docker for openstack
    - update ubuntu image to 18.04 from 14.04
    - update node version to 10.16.3 from 6.11.4
    - update mongo to 3.6.14 from 3.2.4
    - update apache httpd image to 2.4.41 from 2.4.27
    - update docker-compose version to 3 from 2
    - deploy bioinformatic tools using Conda
    - switch to newest versions of samtools,
      htslib, freebayes, biobambam
    - improve documentation
  - change installation method for dependencies in travis to use conda
    - add check for biobambam to also use cache
  - replace biobambam's "bamstreamingmarkduplicates" with samtools' "markdup"
    - still present in dev tests