@@ -1,0 +1,65 @@
+name: Unit tests
+
+on: [push, pull_request]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: ["10.16.3", "10.18.1", "12.14.1"]
+
+    steps:
+
+    - name: Check out repository code
+      uses: actions/checkout@v2
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+    
+    - name: Cache conda modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-conda-modules
+      with:
+        path: /tmp/software
+        key: ${{ runner.os }}-build-${{ env.cache-name }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}
+
+    - name: Setup dependencies
+      env:
+        MONGODB_VERSION: 3.6.14
+        MINICONDA_VERSION: "4.10.3"
+        CONDA_GENERIC_CHANNEL: "https://dnap.cog.sanger.ac.uk/npg/conda/prod/generic/linux-64/"
+        CONDA_GENERIC_DEVEL_CHANNEL: "https://dnap.cog.sanger.ac.uk/npg/conda/devel/generic/linux-64/"
+        MINICONDA_HOME: "/tmp/miniconda"
+        SOFTWARE_HOME: "/tmp/software"
+        FREEBAYES_VERSION: "1.2.0"
+        BIOBAMBAM_VERSION: "2.0.79"
+        SAMTOOLS1_VERSION: "1.10+42_g3c4b380"
+      run: |
+        ./.travis/install.sh
+        export PATH="/tmp/usr/bin:${PATH}"
+        npm install
+        npm install -g grunt-cli
+        npm --version
+        mongo --version
+        conda --version
+        bamstreamingmarkduplicates --version
+        samtools --version
+
+    - name: Run tests
+      run: grunt -v
