@@ -15,7 +15,7 @@ cache:
 env:
   global:
     - MONGODB_VERSION=3.6.14
-    - MINICONDA_VERSION="4.6.14"
+    - MINICONDA_VERSION="4.10.3"
     - CONDA_GENERIC_CHANNEL="https://dnap.cog.sanger.ac.uk/npg/conda/prod/generic/linux-64/"
     - CONDA_GENERIC_DEVEL_CHANNEL="https://dnap.cog.sanger.ac.uk/npg/conda/devel/generic/linux-64/"
     - MINICONDA_HOME="/tmp/miniconda"
